src/test/ui/issues/issue-50264-inner-deref-trait/result-as_deref.stderr
error[E0599]: the method `as_deref` exists for enum `std::result::Result<{integer}, _>`, but its trait bounds were not satisfied
  --> $DIR/result-as_deref.rs:2:27
   |
LL |     let _result = &Ok(42).as_deref();
   |                           ^^^^^^^^
   |
   = note: the following trait bounds were not satisfied:
           `{integer}: Deref`
           `<{integer} as Deref>::Target = _`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
